# 12Bence34

./: README.md
week-01/day-3/Hello_Others/: main.cpp
week-01/day-3/Hello_user/: CMakeLists.txt  main.cpp
week-01/day-3/Introduce_Yourself/: main.cpp
week-01/day-3/SecondsInADay/: main.cpp
week-01/day-3/coding_hours/: main.cpp
week-01/day-3/define_basic_info/: main.cpp
week-01/day-3/favorite_number/: main.cpp
week-01/day-3/hello_me/: main.cpp
week-01/day-3/mile_to_km_converter/: main.cpp
week-01/day-3/odd-even/: main.cpp
week-01/day-3/one_two_a_lot/: main.cpp
week-01/day-3/swap/: main.cpp
week-01/day-3/two_numbers/: main.cpp
week-01/day-3/variable_mutation/: main.cpp
week-01/day-4/Greeter_function/: main.cpp
week-01/day-4/Summing/: main.cpp
week-01/day-4/Third/: main.cpp
week-01/day-4/append_a_func/: main.cpp
week-01/day-4/doubling/: main.cpp
week-01/day-4/factorio/: main.cpp
week-01/day-4/swap/: main.cpp
week-02/day-1/adding/: main.cpp
week-02/day-1/change_value/: main.cpp
week-02/day-1/find_minimum/: main.cpp
week-02/day-1/pointer_type/: main.cpp
week-02/day-1/print_value/: main.cpp
week-02/day-1/swap/: main.cpp
week-02/day-2/list_introduction-1/: main.cpp
week-02/day-2/map_introduction-1/: main.cpp
week-02/day-2/simple_replace/: main.cpp
week-02/day-2/takes_longer/: main.cpp
week-04/day-03/Instruments-to-Stringinstruments/: CMakeLists.txt  bassGuitar.cpp  bassGuitar.h  electricGuitar.cpp  electricGuitar.h  instrument.h  main.cpp  stringedInstrument.cpp  stringedInstrument.h  violin.cpp  violin.h
(+53 files in other folders)
